--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio do joão victor</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
     <header></header>
-    <main>
-        <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
-        <p>Olá! Sou João Santos, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-        <a href="https://instagram.com/joaovictor_mel0">Instagram</a>
-        <a href="shttps://github.com/guilhermeonrail">Github</a>
-        <img src="imagemgenerica.jpg" alt="foto de um gatinho, pedindo para orar, para que sobre algo para os betas.">
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou João Santos, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://instagram.com/joaovictor_mel0">Instagram</a>
+                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrail">Github</a>
+            </div>
+        </section>
+
+        <img src="src/imgs/imagem-alura.png" alt="foto de uma pessoa mechendo no computador.">
     </main>
     <footer></footer>
 </body>
