--- a/etapa2-formacao/index.html
+++ b/etapa2-formacao/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio do joão victor</title>
-    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="./src/css/styles.css">
 </head>
 <body>
     <header></header>
@@ -13,12 +13,23 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou João Santos, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/joaovictor_mel0">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrail">Github</a>
+                <h2 class="apresentacao_links_subtitulo">Acesse minhas redes:</h2>
+                <!--aqui utilizamos um h2 porque a pagina deve conter apenas um h1, isto faz com que não se tenha problemas ao pesquisar a pagina em um navegador-->
+                <a class="apresentacao__links__link" href="www.linkedin.com/in/joão-victor-melo-santos-31872b300">
+                <img src="./src/imgs/linkedin.png" alt="logo linkedin">    
+                    Linkedin
+                </a>
+                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrail">
+                    <img src="./src/imgs/github.png" alt="logo github">
+                    Github</a>
+                <a class="apresentacao__links__link" href="https://instagram.com/joaovictor_mel0">
+                    <img src="./src/imgs/instagram.png" alt="logo instagram">
+                    Instagram
+                </a>
             </div>
         </section>
 
-        <img src="src/imgs/imagem-alura.png" alt="foto de uma pessoa mechendo no computador.">
+        <img src="./src/imgs/imagem-alura.png" alt="foto de uma pessoa mechendo no computador.">
     </main>
     <footer></footer>
 </body>
