adicionando animação hover na imagem e nos botões

--- a/etapa2-formacao/index.html
+++ b/etapa2-formacao/index.html
@@ -29,7 +29,7 @@
             </div>
         </section>
 
-        <img src="./src/imgs/imagem-alura.png" alt="foto de uma pessoa mechendo no computador.">
+        <img class="apresentacao_imagem-principal" src="./src/imgs/imagem-alura.png" alt="foto de uma pessoa mechendo no computador.">
     </main>
     <footer></footer>
 </body>
