adicionando o footer da pagina

--- a/etapa2-formacao/index.html
+++ b/etapa2-formacao/index.html
@@ -31,6 +31,9 @@
 
         <img class="apresentacao_imagem-principal" src="./src/imgs/imagem-alura.png" alt="foto de uma pessoa mechendo no computador.">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por: João Victor Melo.</p>
+    </footer>
+    </footer>
 </body>
 </html>
