adicionando o link da pagina 'curriculo' ao cabeçalho da pagina principal

--- a/etapa2-formacao/index.html
+++ b/etapa2-formacao/index.html
@@ -9,8 +9,9 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link">Home</a>
-            <a class="cabecalho__menu__link">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="curriculo.html">Currículo</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -20,7 +21,7 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao_links_subtitulo">Acesse minhas redes:</h2>
                 <!--aqui utilizamos um h2 porque a pagina deve conter apenas um h1, isto faz com que não se tenha problemas ao pesquisar a pagina em um navegador-->
-                <a class="apresentacao__links__link" href="www.linkedin.com/in/joão-victor-melo-santos-31872b300">
+                <a class="apresentacao__links__link" href="https://linkedin.com/in/joão-victor-melo-santos-31872b300">
                 <img src="./src/imgs/linkedin.png" alt="logo linkedin">    
                     Linkedin
                 </a>
