--- a/etapa2-formacao/curriculo.html
+++ b/etapa2-formacao/curriculo.html
@@ -12,20 +12,21 @@
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
             <a class="cabecalho__menu__link" href="curriculo.html">Currículo</a>
-        </nav>
+        </nav>     
     </header>
 
     <main class="curriculo__principal">
-        <section class="curriculo__principal__conteudo">
+        <section class="curriculo__principal__conteudo">            
+            <h1 class="curriculo__principal__conteudo__titulo">Currículo - João Victor Melo Santos</h1>
 
-            <h3> Objetivo</h3>
+            <h2> Objetivo</h2>
             <p>Estágio em Tecnologia da Informação, buscando oportunidades para aprender na prática, desenvolver habilidades técnicas e contribuir com projetos reais de tecnologia, inovação ou soluções digitais, incluindo desenvolvimento web, IoT e áreas relacionadas à saúde e bem-estar.</p>
 
-            <h3>Formação Acadêmica</h3>
+            <h2>Formação Acadêmica</h2>
             <p>Engenharia de Software — FIAP | 2025 — 2029 (indo para o 2º semestre em curso)</p>
 
-            <h3>PROJETOS ACADÊMICOS</h3>
-            <p>Focus Together — Global Solution FIAP | Equipe: 3 pessoas | Nota: 100/100 em 5 de 6 matérias. <strong class="curriculo__conteudo__destaque">Projeto campeão do semestre.</strong></p>
+            <h2>PROJETOS ACADÊMICOS</h2>
+            <p>Focus Together — Global Solution FIAP | Equipe: 3 pessoas | Nota: 100/100 em 5 de 6 matérias. <strong class="curriculo__conteudo__destaque">Projeto campeão da turma 1ESPA.</strong></p>
             <p>Plataforma web colaborativa para apoiar saúde mental no trabalho remoto, com Edge Computing (sensores de luz/ruído), gamificação e coworking virtual simulado.</p>
             <ul>
                 <li>Desenvolvimento front-end (HTML5, CSS3, JavaScript)</li>
@@ -33,21 +34,21 @@
                 <li>Criação e edição completa dos vídeos do projeto</li>
                 <li>Tecnologias: HTML, CSS, JavaScript, Arduino, Git/GitHub | WebFront | EdgeComputing</li>
             </ul>
-            <h3>EXPERIÊNCIA PROFISSIONAL</h3>
+            <h2>EXPERIÊNCIA PROFISSIONAL</h2>
             <p> Atendente — Loja de Espetos (Negócio Familiar) | 2021 — Atual |Atendimento ao cliente, atuação sob pressão em horários de pico.</p>
             <p> Competências: comunicação, resolução de problemas, trabalho em equipe e gestão de tempo.</p>
-            <h3>HABILIDADES TÉCNICAS</h3>
+            <h2>HABILIDADES TÉCNICAS</h2>
             <p><strong class="curriculo__conteudo__destaque">Tecnologias:</strong> Python (básico) | HTML, CSS, JavaScript, C/C++ (nível inicial - uso em projetos)</p>
             <p><strong class="curriculo__conteudo__destaque">Ferramentas:</strong> Git/GitHub, VS Code, Arduino IDE, Wokwi.</p>
             <p><strong class="curriculo__conteudo__destaque">Conceitos:</strong> Desenvolvimento web front-end, Edge Computing/IoT, Metodologias ágeis (Scrum), Storytelling técnico.</p>
-            <h3>CERTIFICAÇÕES</h3>
+            <h2>CERTIFICAÇÕES</h2>
             <ul>
                 <li>Resolvendo Problemas com Matemática — FIAP | 60h | 2025</li>
                 <li>Formação Social e Sustentabilidade — FIAP | 80h | 2025</li>
             </ul>
-            <h3>COMPETÊNCIAS</h3>
-            <p>Trabalho em equipe • Comunicação clara • Organização • Raciocínio lógico • Adaptabilidade • Aprendizado rápido<p>
-            <h3>DISPONIBILIDADE</h3>
+            <h2>COMPETÊNCIAS</h2>
+            <p>Trabalho em equipe • Comunicação clara • Organização • Raciocínio lógico • Adaptabilidade • Aprendizado rápido</p>
+            <h2>DISPONIBILIDADE</h2>
             <p>Segunda a sexta (após 13h) e sábados (integral) | Presencial, híbrido ou remoto | São Paulo/Guarulhos</p>          
 
         </section>
