alterando nome da classe dos links e alterando medidas width de px para %

--- a/etapa3-formacao/index.html
+++ b/etapa3-formacao/index.html
@@ -21,21 +21,21 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao_links_subtitulo">Acesse minhas redes:</h2>
                 <!--aqui utilizamos um h2 porque a pagina deve conter apenas um h1, isto faz com que não se tenha problemas ao pesquisar a pagina em um navegador-->
-                <a class="apresentacao__links__link" href="https://linkedin.com/in/joão-victor-melo-santos-31872b300">
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/joão-victor-melo-santos-31872b300">
                 <img src="./src/imgs/linkedin.png" alt="logo linkedin">    
                     Linkedin
                 </a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrail">
+                <a class="apresentacao__links__navegacao" href="https://github.com/guilhermeonrail">
                     <img src="./src/imgs/github.png" alt="logo github">
                     Github</a>
-                <a class="apresentacao__links__link" href="https://instagram.com/joaovictor_mel0">
+                <a class="apresentacao__links__navegacao" href="https://instagram.com/joaovictor_mel0">
                     <img src="./src/imgs/instagram.png" alt="logo instagram">
                     Instagram
                 </a>
             </div>
         </section>
 
-        <img class="apresentacao_imagem-principal" src="./src/imgs/imagem-alura.png" alt="foto de uma pessoa mechendo no computador.">
+        <img class="apresentacao__imagem" src="./src/imgs/imagem-alura.png" alt="foto de uma pessoa mechendo no computador.">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por: João Victor Melo.</p>
